<resources>
    <string name="app_name">AynAssignment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="email_id">Email id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="user_name">User Name</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="view_users">View users</string>
</resources>
